--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.0",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^8.1.2",
