--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
@@ -17,10 +20,12 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.66.1",
+    "stripe": "^13.9.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
